# xair

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.claude/rules/: breaking-changes.md  framework-genericity.md  registry-pattern.md
.github/workflows/: publish.yml
conda-recipe/: README.md  meta.yaml
src/xair/: __init__.py  __main__.py  command_registry.py  dispatch.py  log.py
src/xair/contracts/: __init__.py  actions_io.py  agent_runner.py  clock.py  file_store.py  github.py  issue_tracker.py  providers.py  publisher.py  repository.py  transport.py
src/xair/domain/: __init__.py  agent_run.py  diff_index.py  exceptions.py  invariants.py  models.py  narrator.py  plan.py  publishing.py  verdict.py
src/xair/gatherers/: ci_status.py  commits.py  diff.py  file_context.py  issues.py  rules.py  threads.py
src/xair/infra/: actions_io.py  agent_runner.py  agent_sdk_provider.py  codex_cli_runner.py  constants.py  container.py  file_store.py  github_provider.py  graphql.py  openai_provider.py  slack.py
src/xair/orchestration/: __init__.py  exceptions.py  executor.py  pipeline.py  stage.py  tracing.py
src/xair/orchestrator/: __init__.py  executor.py  plan.py  plan_loader.py  planner.py  token_refresh.py
src/xair/policies/: __init__.py  budget.py  escalation.py  gating.py  routing.py  security.py
src/xair/prompt/: agent_summary.py  builder.py  claude_builder.py  trace_formatter.py
src/xair/queries/: get_review_threads.graphql  get_review_threads_with_ids.graphql
src/xair/services/: local_runner.py
src/xair/testing/: __init__.py  fakes.py
