[project]
name = "xair"
version = "0.0.1"
description = "X-AI-Reviewer — engine-agnostic framework for LLM-powered CLI commands wired to GitHub Actions (gather → format → LLM → emit)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bernard Uriza Orozco" }]
license = { text = "MIT" }
keywords = ["ai", "llm", "github-actions", "code-review", "pipeline", "anthropic", "openai", "claude", "gpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
]

dependencies = [
    "loguru>=0.7",
    "pydantic>=2.5",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.40", "anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "openai>=1.40",
    "anthropic>=0.30",
]

[project.scripts]
xair = "xair.__main__:main"

[project.urls]
Homepage = "https://github.com/BernardUriza/xair"
Repository = "https://github.com/BernardUriza/xair"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xair*"]

[tool.setuptools.package-data]
"xair.queries" = ["*.graphql"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
